--- a/WpfBasics/MainWindow.xaml
+++ b/WpfBasics/MainWindow.xaml
@@ -24,7 +24,13 @@
                 <Button Margin="10 0 10 0" Grid.Column="2" Content="Refresh" />
             
             </Grid>
+
+            <TextBlock Text="Pulse Properties" FontWeight="Bold" Margin="0 10" />
             
+            <!-- Description -->
+            <TextBlock Text="Description" />
+            <TextBlock Padding="2" />
+
         </StackPanel>
     </Border>
 
