Added Status and Revision

--- a/WpfBasics/MainWindow.xaml
+++ b/WpfBasics/MainWindow.xaml
@@ -30,6 +30,27 @@
             <!-- Description -->
             <TextBlock Text="Description" />
             <TextBlock Padding="2" />
+            
+            <!-- Status and Revision -->
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <!-- Status -->
+                <StackPanel Grid.Column="0" Margin="0 0 10 0">
+                    <TextBlock Text="Status" />
+                    <TextBox IsReadOnly="True" Background="#eee"  Padding="2" />
+                </StackPanel>
+
+                <!-- Revision -->
+                <StackPanel Grid.Column="1">
+                    <TextBlock Text="Revision" />
+                    <TextBox IsReadOnly="True" Background="#eee"  Padding="2" />
+                </StackPanel>
+
+            </Grid>
 
         </StackPanel>
     </Border>
