--- a/WpfBasics/MainWindow.xaml
+++ b/WpfBasics/MainWindow.xaml
@@ -52,6 +52,51 @@
 
             </Grid>
 
+            <!-- Description -->
+            <TextBlock Text="Part Number" />
+            <TextBox IsReadOnly="True" Background="#eee" Padding="2" />
+            
+            <!-- Raw Material -->
+            <TextBlock Text="Raw Material" FontWeight="Bold" Margin="0 10" />
+
+            <!-- Material -->
+            <TextBlock Text="Description" />
+            <ComboBox Padding="2" />
+
+            <!-- Manufacturing Info -->
+            <TextBlock Text="Manufacturing Info" FontWeight="Bold" Margin="0 10" />
+
+            <!-- Work Centres -->
+            <TextBlock Text="Work Centres" />
+            <ComboBox Padding="2" />
+
+            <!-- Checkboxes -->
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <!-- Column 1 -->
+                <StackPanel Grid.Column="0" Margin="0 0 10 0">
+                    <CheckBox Content="Weld" />
+                    <CheckBox Content="Assembly" />
+                    <CheckBox Content="Plasma" />
+                    <CheckBox Content="Laser" />
+                    <CheckBox Content="Purchase" />
+                </StackPanel>
+
+                <!-- Column 2 -->
+                <StackPanel Grid.Column="1">
+                    <CheckBox Content="Lathe" />
+                    <CheckBox Content="Drill" />
+                    <CheckBox Content="Fold" />
+                    <CheckBox Content="Roll" />
+                    <CheckBox Content="Saw" />
+                </StackPanel>
+
+            </Grid>
+
         </StackPanel>
     </Border>
 
