--- a/WpfBasics/MainWindow.xaml
+++ b/WpfBasics/MainWindow.xaml
@@ -29,7 +29,7 @@
             
             <!-- Description -->
             <TextBlock Text="Description" />
-            <TextBlock Padding="2" />
+            <TextBox Padding="2" />
             
             <!-- Status and Revision -->
             <Grid>
@@ -99,7 +99,7 @@
 
             <!-- Length -->
             <TextBlock Text="Length" />
-            <TextBlock Padding="2" />
+            <TextBox Padding="2" />
 
             <!-- Mass -->
             <TextBlock Text="Mass" />
@@ -121,17 +121,17 @@
 
             <!-- Supplier Name -->
             <TextBlock Text="Supplier Name" />
-            <TextBlock Padding="2" />
+            <TextBox Padding="2" />
             
             <!-- Supplier Code -->
             <TextBlock Text="Supplier Code" />
-            <TextBlock Padding="2" />
+            <TextBox Padding="2" />
 
             <TextBlock Text="Additional Info" FontWeight="Bold" Margin="0 10" />
 
             <!-- Note -->
             <TextBlock Text="Note" />
-            <TextBlock Padding="2" />
+            <TextBox Padding="2" />
 
         </StackPanel>
     </Border>
