--- a/WpfBasics/MainWindow.xaml
+++ b/WpfBasics/MainWindow.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfBasics"
         mc:Ignorable="d"
+        Loaded="Window_Loaded"
         Title="Wpf Basics" Height="800" Width="400">
-    
+
     <Border Padding="10">
         <StackPanel>
-            
+
             <!-- Buttons -->
             <Grid>
 
@@ -18,19 +19,19 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-            
-                <Button Margin="10 0 0 0" Grid.Column="0" Content="Apply" />
-                <Button Grid.Column="1" Content="Reset" />
-                <Button Margin="10 0 10 0" Grid.Column="2" Content="Refresh" />
-            
+
+                <Button x:Name="ApplyButton" Click="ApplyButton_Click" Margin="0 0 10 0" Grid.Column="0" Content="Apply" />
+                <Button x:Name="ResetButton" Click="ResetButton_Click" Grid.Column="1" Content="Reset" />
+                <Button Margin="10 0 0 0" Grid.Column="2" Content="Refresh" />
+
             </Grid>
 
             <TextBlock Text="Pulse Properties" FontWeight="Bold" Margin="0 10" />
-            
+
             <!-- Description -->
             <TextBlock Text="Description" />
-            <TextBox Padding="2" />
-            
+            <TextBox x:Name="DescriptionText" Padding="2" />
+
             <!-- Status and Revision -->
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -41,34 +42,33 @@
                 <!-- Status -->
                 <StackPanel Grid.Column="0" Margin="0 0 10 0">
                     <TextBlock Text="Status" />
-                    <TextBox IsReadOnly="True" Background="#eee"  Padding="2" />
+                    <TextBox IsReadOnly="True" Background="#eee" Padding="2" />
                 </StackPanel>
 
                 <!-- Revision -->
                 <StackPanel Grid.Column="1">
                     <TextBlock Text="Revision" />
-                    <TextBox IsReadOnly="True" Background="#eee"  Padding="2" />
+                    <TextBox IsReadOnly="True" Background="#eee" Padding="2" />
                 </StackPanel>
 
             </Grid>
 
             <!-- Part Number -->
             <TextBlock Text="Part Number" />
-            <TextBox IsReadOnly="True" Background="#eee" Padding="2" />
-            
+            <TextBox IsReadOnly="True" Background="#eee"  Padding="2" />
+
             <!-- Raw Material -->
             <TextBlock Text="Raw Material" FontWeight="Bold" Margin="0 10" />
 
             <!-- Material -->
-            <TextBlock Text="Description" />
+            <TextBlock Text="Material" />
             <ComboBox Padding="2" />
 
             <!-- Manufacturing Info -->
             <TextBlock Text="Manufacturing Info" FontWeight="Bold" Margin="0 10" />
 
             <!-- Work Centres -->
-            <TextBlock Text="Work Centres" />
-            <ComboBox Padding="2" />
+            <TextBlock Text="Work Centres" Margin="0 0 0 10" />
 
             <!-- Checkboxes -->
             <Grid>
@@ -79,50 +79,50 @@
 
                 <!-- Column 1 -->
                 <StackPanel Grid.Column="0" Margin="0 0 10 0">
-                    <CheckBox Content="Weld" />
-                    <CheckBox Content="Assembly" />
-                    <CheckBox Content="Plasma" />
-                    <CheckBox Content="Laser" />
-                    <CheckBox Content="Purchase" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="WeldCheckbox" Content="Weld" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="AssemblyCheckbox" Content="Assembly" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="PlasmaCheckbox" Content="Plasma" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="LaserCheckbox" Content="Laser" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="PurchaseCheckbox" Content="Purchase" />
                 </StackPanel>
 
                 <!-- Column 2 -->
                 <StackPanel Grid.Column="1">
-                    <CheckBox Content="Lathe" />
-                    <CheckBox Content="Drill" />
-                    <CheckBox Content="Fold" />
-                    <CheckBox Content="Roll" />
-                    <CheckBox Content="Saw" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="LatheCheckbox" Content="Lathe" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="DrillCheckbox" Content="Drill" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="FoldCheckbox" Content="Fold" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="RollCheckbox" Content="Roll" />
+                    <CheckBox Checked="Checkbox_Checked" x:Name="SawCheckbox" Content="Saw" />
                 </StackPanel>
 
             </Grid>
 
             <!-- Length -->
             <TextBlock Text="Length" />
-            <TextBox Padding="2" />
+            <TextBox x:Name="LengthText" Padding="2" />
 
             <!-- Mass -->
             <TextBlock Text="Mass" />
-            <TextBox IsReadOnly="True" Background="#eee" Padding="2" />
+            <TextBox x:Name="MassText" IsReadOnly="True" Background="#eee"  Padding="2" />
 
             <!-- Finish -->
             <TextBlock Text="Finish" />
-            <ComboBox SelectedIndex="0"  Padding="2">
+            <ComboBox SelectionChanged="FinishDropdown_SelectionChanged" x:Name="FinishDropdown" SelectedIndex="0" Padding="2">
                 <ComboBoxItem>Painted</ComboBoxItem>
                 <ComboBoxItem>Not Painted</ComboBoxItem>
             </ComboBox>
 
             <!-- Purchase Info -->
             <TextBlock Text="Purchase Information" />
-            <ComboBox SelectedIndex="0"  Padding="2">
+            <ComboBox SelectedIndex="0" Padding="2">
                 <ComboBoxItem>Rubber</ComboBoxItem>
                 <ComboBoxItem>Not Rubber</ComboBoxItem>
             </ComboBox>
 
             <!-- Supplier Name -->
             <TextBlock Text="Supplier Name" />
-            <TextBox Padding="2" />
-            
+            <TextBox x:Name="SupplierNameText" TextChanged="SupplierNameText_TextChanged" Padding="2" />
+
             <!-- Supplier Code -->
             <TextBlock Text="Supplier Code" />
             <TextBox Padding="2" />
@@ -131,7 +131,7 @@
 
             <!-- Note -->
             <TextBlock Text="Note" />
-            <TextBox Padding="2" />
+            <TextBox x:Name="NoteText" Padding="2" />
 
         </StackPanel>
     </Border>
